--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
+<!-- Link to repository on GitHub: https://github.com/Dominik-developer/Business-Card -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wizytówka</title>
+    <title>Business card</title>
+    <meta name="author" content="Dominik-developer">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="business-card">
-            <img src="https://randomuser.me/api/portraits/men/78.jpg" alt="Profile picture">
+            <!--<img src="https://randomuser.me/api/portraits/men/78.jpg" alt="Profile picture">--> <!-- this picture is example, please delete this link-->
         <p class="username">
             <span>name surname</span>
         </p>
@@ -26,7 +28,6 @@
         </p>
         </div>
     </div>
-    
     
 </body>
 </html>
