--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="business-card">
-            <!--<img src="https://randomuser.me/api/portraits/men/78.jpg" alt="Profile picture">--> <!-- this picture is example, please delete this link-->
+            <!--<img src="" alt="Profile picture">--> <!-- add here link to profile pic-->
         <p class="username">
             <span>name surname</span>
         </p>
